--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
+<!--      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>-->
 
 
+<!--      <script src="https://threejs.org/build/three.js"></script>-->
+<!--      <script src="https://threejs.org/examples/jsm/loaders/GLTFLoader.js"></script>-->
 
 
       <title>Vite App</title>
